--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -17,11 +17,11 @@ id: Material
 
 ### bool HasProperty(string) {#bool-HasProperty-string}
 
-### Vec3 GetPropertyVec3(string) {#Vec3-GetPropertyVec3-string}
+### Vec3 GetPropertyVec3(Material, string) {#Vec3-GetPropertyVec3-Material-string}
 
-### Vec4 GetPropertyVec4(string) {#Vec4-GetPropertyVec4-string}
+### Vec4 GetPropertyVec4(Material, string) {#Vec4-GetPropertyVec4-Material-string}
 
-### nil SetProperty(string, Vec3) {#nil-SetProperty-string-Vec3}
+### nil SetProperty(Material, string, Vec3) {#nil-SetProperty-Material-string-Vec3}
 
-### nil SetProperty(string, Vec4) {#nil-SetProperty-string-Vec4}
+### nil SetProperty(Material, string, Vec4) {#nil-SetProperty-Material-string-Vec4}
 
