--- a/docs/90-api/meshDataBuilder.mdx
+++ b/docs/90-api/meshDataBuilder.mdx
@@ -27,6 +27,8 @@ id: MeshDataBuilder
 
 ### nil AddIndex(int, int) {#nil-AddIndex-int-int}
 
+### nil AddShape(Shape, Vec4) {#nil-AddShape-Shape-Vec4}
+
 ## Properties
 
 ### bool static {#bool-static}
