--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -25,6 +25,10 @@ id: Object
 
 ### ScriptComponent FindScriptComponentByName(string) {#ScriptComponent-FindScriptComponentByName-string}
 
+### userdata FindScript(string) {#userdata-FindScript-string}
+
+### string GetNetworkFlow() {#string-GetNetworkFlow}
+
 ## Properties
 
 ### string name {#string-name}
