--- a/docs/90-api/quat.mdx
+++ b/docs/90-api/quat.mdx
@@ -61,6 +61,10 @@ id: Quat
 
 ### Quat Slerp(Quat, Quat, float) {#Quat-Slerp-Quat-Quat-float}
 
+### Quat Sterp(Quat, Quat, float) {#Quat-Sterp-Quat-Quat-float}
+
+### Quat Sterp(Quat, Quat, float, Vec3) {#Quat-Sterp-Quat-Quat-float-Vec3}
+
 ### nil Normalize() {#nil-Normalize}
 
 ### Quat GetNormalized() {#Quat-GetNormalized}
@@ -100,8 +104,6 @@ id: Quat
 ### Quat LookAt(Vec3, Vec3) {#Quat-LookAt-Vec3-Vec3}
 
 ### string __tostring(Quat) {#string-tostring-Quat}
-
-### const char __name(Quat) {#const-char-name-Quat}
 
 ## Properties
 
