--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -37,6 +37,10 @@ id: Scene
 
 ### Component GetComponentById(int) {#Component-GetComponentById-int}
 
+### CameraComponent GetActiveCamera() {#CameraComponent-GetActiveCamera}
+
+### nil SetActiveCamera(CameraComponent) {#nil-SetActiveCamera-CameraComponent}
+
 ### bool IsNameValid(string) {#bool-IsNameValid-string}
 
 ### bool Save() {#bool-Save}
@@ -58,4 +62,6 @@ id: Scene
 ## Properties
 
 ### LightingUpdate lighting {#LightingUpdate-lighting}
+
+### LightingUpdate objectLighting {#LightingUpdate-objectLighting}
 
