--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -70,7 +70,9 @@ end
 
 ### bool AssignScript(string) {#bool-AssignScript-string}
 
-### nil RPC(...) {#nil-RPC}
+### int RPC(...) {#int-RPC}
+
+### string GetNetworkFlow() {#string-GetNetworkFlow}
 
 ## Properties
 
