--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -169,7 +169,7 @@ id: VoxelDB
 
 ### string GetLayers() {#string-GetLayers}
 
-### Vec3 GetCenter() {#Vec3-GetCenter}
+### userdata GetContentDimensions() {#userdata-GetContentDimensions}
 
 ## Properties
 
