--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -9,6 +9,10 @@ id: VoxelRender
 
 ### bool __eq(VoxelRender, VoxelRender) {#bool-eq-VoxelRender-VoxelRender}
 
+## Methods
+
+### nil RebuildLighting() {#nil-RebuildLighting}
+
 ## Properties
 
 ### string type {#string-type}
@@ -20,6 +24,8 @@ id: VoxelRender
 ### bool enabled {#bool-enabled}
 if Enabled is switched off on server, then the object becomes invisible on all clients, or it's not streamed to clients.
 each client can enable/disable rendering of VRC locally
+
+### float lodBias {#float-lodBias}
 
 ### bool outline {#bool-outline}
 
