--- a/docs/90-api/enums/function.mdx
+++ b/docs/90-api/enums/function.mdx
@@ -10,8 +10,8 @@ id: function
 | Never |  |
 | Less |  |
 | Equal |  |
-| Lequl |  |
 | Greater |  |
 | Notequal |  |
 | Gequal |  |
 | Always |  |
+| Lequal |  |
