Update save voxel data image and desc

--- a/docs/20-editor-basics.mdx
+++ b/docs/20-editor-basics.mdx
@@ -14,7 +14,7 @@ The `Paint` brush has various blend modes which you may know from Photoshop. See
 
 ![Panel](/img/editor-basics/panelBrush.png)
 
-Save voxels edits of the terrain by pressing `Save Voxel Data` in the dev menu on the right.
+Save voxels edits of the terrain by pressing `Menu` in the top left and then `Save Voxel Data`.
 
 ![Save](/img/editor-basics/saveVoxels.png)
 
