--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -1,6 +1,6 @@
 ---
-title: CameraComponent
-id: CameraComponent
+title: Camera
+id: Camera
 ---
 `Client`
 `Server`
@@ -15,15 +15,19 @@ id: CameraComponent
 
 ## Properties
 
+### Object object {#Object-object}
+
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+
+### bool isDestroyed {#bool-isDestroyed}
+
 ### string type {#string-type}
 
 ### Object object {#Object-object}
+
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
 
 ### Frustum frustum {#Frustum-frustum}
 
 ### float fovY {#float-fovY}
-
-### string type {#string-type}
-
-### Object object {#Object-object}
 
