--- a/docs/90-api/component.mdx
+++ b/docs/90-api/component.mdx
@@ -9,7 +9,9 @@ See also: [ScriptComponent](ScriptComponent)
 
 ## Properties
 
-### string type {#string-type}
-
 ### Object object {#Object-object}
+
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+
+### bool isDestroyed {#bool-isDestroyed}
 
