--- a/docs/90-api/meshData.mdx
+++ b/docs/90-api/meshData.mdx
@@ -11,6 +11,12 @@ id: MeshData
 
 ## Properties
 
+### Object object {#Object-object}
+
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+
+### bool isDestroyed {#bool-isDestroyed}
+
 ### string file {#string-file}
 
 ### MeshDataBuilder data {#MeshDataBuilder-data}
@@ -18,4 +24,6 @@ id: MeshData
 ### string type {#string-type}
 
 ### Object object {#Object-object}
+
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
 
