--- a/docs/90-api/realtimeLightingInfo.mdx
+++ b/docs/90-api/realtimeLightingInfo.mdx
@@ -7,29 +7,33 @@ id: RealtimeLightingInfo
 
 ## Properties
 
-### bool directional {#bool-directional}
+### Vec3 diffuseColor {#Vec3-diffuseColor}
 
-### bool shadows {#bool-shadows}
+### bool directionalLight {#bool-directionalLight}
 
-### float shadowsIntensity {#float-shadowsIntensity}
+### Vec3 direction {#Vec3-direction}
+
+### float diffuseRayLen {#float-diffuseRayLen}
 
 ### float diffuseDirSpread {#float-diffuseDirSpread}
 
-### bool ambientOcclusion {#bool-ambientOcclusion}
-
 ### int diffuseSamples {#int-diffuseSamples}
+
+### float shadowsIntensity {#float-shadowsIntensity}
+
+### bool shadows {#bool-shadows}
+
+### bool ambientOcclusion {#bool-ambientOcclusion}
 
 ### Vec3 ambientColor {#Vec3-ambientColor}
 
-### Vec3 diffuseColor {#Vec3-diffuseColor}
-
-### Vec3 lightDir {#Vec3-lightDir}
+### float ambientRayLen {#float-ambientRayLen}
 
 ### int ambientSamples {#int-ambientSamples}
 
-### float diffuseRayLength {#float-diffuseRayLength}
+### float skyAmbientIntensity {#float-skyAmbientIntensity}
 
-### float ambientRayLength {#float-ambientRayLength}
+### float ambientOcclusionFactor {#float-ambientOcclusionFactor}
 
 ### int taskBoxScale {#int-taskBoxScale}
 
