--- a/docs/90-api/scriptInstance.mdx
+++ b/docs/90-api/scriptInstance.mdx
@@ -21,11 +21,11 @@ id: ScriptInstance
 
 ## Properties
 
-### ScriptComponent component {#ScriptComponent-component}
+### Script component {#Script-component}
 
 ### Object object {#Object-object}
 
-### Transform transform {#Transform-transform}
+### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
 
 ### bool onServer {#bool-onServer}
 
