--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -53,3 +53,9 @@ This class is only available on server
 
 ### double GetLogTime(string) {#double-GetLogTime-string}
 
+### table GetLogTimers(string) {#table-GetLogTimers-string}
+
+### nil AnalyticsServer(string, table) {#nil-AnalyticsServer-string-table}
+
+### nil AnalyticsClient(int, string, table) {#nil-AnalyticsClient-int-string-table}
+
