--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -169,7 +169,7 @@ id: VoxelDB
 
 ### string GetLayers() {#string-GetLayers}
 
-### userdata GetContentDimensions() {#userdata-GetContentDimensions}
+### userdata GetBounds() {#userdata-GetBounds}
 
 ## Properties
 
