--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -7,8 +7,16 @@ id: VoxelDataResource
 
 ## Methods
 
+### VoxelDataResource new(string, bool) {#VoxelDataResource-new-string-bool}
+
+### VoxelDataResource new(string) {#VoxelDataResource-new-string}
+
 ### string Save(string, bool) {#string-Save-string-bool}
 save voxel data in AM file
+
+### userdata GetBounds() {#userdata-GetBounds}
+
+### userdata Duplicate() {#userdata-Duplicate}
 
 ## Properties
 
