--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -111,6 +111,8 @@ This class is only available on client
 
 ### double GetLogTime(string) {#double-GetLogTime-string}
 
+### table GetLogTimers(string) {#table-GetLogTimers-string}
+
 ### double GetFPS() {#double-GetFPS}
 
 ### Config GetConfigInputActions() {#Config-GetConfigInputActions}
@@ -158,8 +160,6 @@ This class is only available on client
 ### nil WriteToScreen(string, Vec2, Vec2, Vec4, int, Vec4) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int-Vec4}
 
 ### nil CloseApp() {#nil-CloseApp}
-
-### Camera GetMainCamera() {#Camera-GetMainCamera}
 
 ### string GetEULA() {#string-GetEULA}
 
