Fix wrong tf name

--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -17,7 +17,7 @@ id: Camera
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### bool isDestroyed {#bool-isDestroyed}
 
@@ -25,7 +25,7 @@ id: Camera
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### Frustum frustum {#Frustum-frustum}
 
