--- a/docs/90-api/meshData.mdx
+++ b/docs/90-api/meshData.mdx
@@ -13,7 +13,7 @@ id: MeshData
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### bool isDestroyed {#bool-isDestroyed}
 
@@ -25,5 +25,5 @@ id: MeshData
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
