--- a/docs/90-api/scriptInstance.mdx
+++ b/docs/90-api/scriptInstance.mdx
@@ -25,7 +25,7 @@ id: ScriptInstance
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### bool onServer {#bool-onServer}
 
