--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -13,7 +13,7 @@ id: VoxelData
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### bool isDestroyed {#bool-isDestroyed}
 
@@ -32,5 +32,5 @@ make local copy of voxel data resource if edited
 
 ### Object object {#Object-object}
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
