--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -43,7 +43,7 @@ id: Object
 
 ## Properties
 
-### shared_ptr<classae::scene::Transform> transform {#sharedptrclassaesceneTransform-transform}
+### Transform transform {#Transform-transform}
 
 ### bool isDestroyed {#bool-isDestroyed}
 
