--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -17,6 +17,8 @@ id: Filter
 
 ### bool useTmp {#bool-useTmp}
 
+### bool useTmpAtlas {#bool-useTmpAtlas}
+
 ### table ignoreList {#table-ignoreList}
 contains objects
 
