--- a/docs/90-api/shape.mdx
+++ b/docs/90-api/shape.mdx
@@ -15,9 +15,15 @@ id: Shape
 
 ### float radius {#float-radius}
 
+### float diameter {#float-diameter}
+
 ### Vec3 pos2 {#Vec3-pos2}
 
 ### float radius2 {#float-radius2}
 
+### float diameter2 {#float-diameter2}
+
 ### table points {#table-points}
+
+### bool useShellPositions {#bool-useShellPositions}
 
