--- a/docs/90-api/staticVoxelData.mdx
+++ b/docs/90-api/staticVoxelData.mdx
@@ -13,7 +13,7 @@ id: StaticVoxelData
 
 ### bool isDestroyed {#bool-isDestroyed}
 
-### string resource {#string-resource}
+### string path {#string-path}
 
 ### bool isLoaded {#bool-isLoaded}
 
