--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -17,16 +17,14 @@ id: VoxelData
 
 ### bool isDestroyed {#bool-isDestroyed}
 
-### string File {#string-File}
-
-### bool CopyOnWrite {#bool-CopyOnWrite}
-
 ### string path {#string-path}
 
 ### VoxelDataResource data {#VoxelDataResource-data}
 
 ### bool copyOnWrite {#bool-copyOnWrite}
 make local copy of voxel data resource if edited 
+
+### bool save {#bool-save}
 
 ### string type {#string-type}
 
