--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -18,6 +18,8 @@ save voxel data in AM file
 
 ### userdata Duplicate() {#userdata-Duplicate}
 
+### nil RebuildLighting() {#nil-RebuildLighting}
+
 ## Properties
 
 ### bool isEditable {#bool-isEditable}
@@ -30,6 +32,4 @@ returns true if data was modified
 
 ### float volumePerc {#float-volumePerc}
 Approximate. Quickly count non-zero blocks of voxel object. Block size is 8x8x8. Block can be fully filled or just 1 voxel
-
-### bool useContent {#bool-useContent}
 
