--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -9,8 +9,6 @@ id: VoxelDB
 
 ### nil Clear() {#nil-Clear}
 
-### nil UseTemporaryLayers() {#nil-UseTemporaryLayers}
-
 ### nil SetSerialOpId(int) {#nil-SetSerialOpId-int}
 
 ### nil Flush() {#nil-Flush}
@@ -83,10 +81,6 @@ id: VoxelDB
 
 ### nil MakeCapsuleV(Vec3i, Vec3i, int, int, Vec3) {#nil-MakeCapsuleV-Vec3i-Vec3i-int-int-Vec3}
 
-### nil FillTmpLayersV(Vec3i, Vec3i, int, int) {#nil-FillTmpLayersV-Vec3i-Vec3i-int-int}
-
-### userdata TraceRayTmpV(Vec3i, Vec3, float) {#userdata-TraceRayTmpV-Vec3i-Vec3-float}
-
 ### nil PaintSphereBlendV(Vec3i, int, Vec3, float, float, float) {#nil-PaintSphereBlendV-Vec3i-int-Vec3-float-float-float}
 
 ### Vec3 GetNormal(Vec3) {#Vec3-GetNormal-Vec3}
@@ -137,13 +131,7 @@ id: VoxelDB
 
 ### nil SetMaterial(Vec3) {#nil-SetMaterial-Vec3}
 
-### nil FillTmpLayers(Vec3, Vec3, float, int) {#nil-FillTmpLayers-Vec3-Vec3-float-int}
-
-### userdata TraceRayTmp(Vec3, Vec3, float) {#userdata-TraceRayTmp-Vec3-Vec3-float}
-
 ### nil InstantiateIE(Vec3, Quat, float) {#nil-InstantiateIE-Vec3-Quat-float}
-
-### nil FreeTmpLayers(int) {#nil-FreeTmpLayers-int}
 
 ### nil ClearContent() {#nil-ClearContent}
 
@@ -163,11 +151,11 @@ id: VoxelDB
 
 ### bool Save(string, string, int) {#bool-Save-string-string-int}
 
-### VoxelInspectData Inspect(Vec3i, int, int, userdata, int) {#VoxelInspectData-Inspect-Vec3i-int-int-userdata-int}
+### userdata InspectNormals(this_state, Vec3, Vec3, float, int, int) {#userdata-InspectNormals-thisstate-Vec3-Vec3-float-int-int}
 
-### VoxelInspectData Inspect2(Vec3, Vec3, float, int, int, userdata, int) {#VoxelInspectData-Inspect2-Vec3-Vec3-float-int-int-userdata-int}
+### VoxelInspectData Inspect(Vec3, Vec3, float, int, int, table, int) {#VoxelInspectData-Inspect-Vec3-Vec3-float-int-int-table-int}
 
-### string GetLayers() {#string-GetLayers}
+### table GetUsedLayers() {#table-GetUsedLayers}
 
 ### userdata GetBounds() {#userdata-GetBounds}
 
