--- a/docs/90-api/voxelInspectData.mdx
+++ b/docs/90-api/voxelInspectData.mdx
@@ -5,15 +5,19 @@ id: VoxelInspectData
 `Client`
 `Server`
 
+## Methods
+
+### table GetTexts() {#table-GetTexts}
+
+### table GetPositions() {#table-GetPositions}
+
+### table GetColors() {#table-GetColors}
+
 ## Properties
 
 ### float voxelSize {#float-voxelSize}
 
-### string texts {#string-texts}
+### string header {#string-header}
 
-### userdata positions {#userdata-positions}
-
-### userdata colors {#userdata-colors}
-
-### Mat4 mat {#Mat4-mat}
+### Vec3 headerPos {#Vec3-headerPos}
 
