Api gen: handle more than one return

--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -21,9 +21,9 @@ This class is only available on server
 
 ### nil ResendScripts() {#nil-ResendScripts}
 
-### userdata GetLuaFilesList() {#userdata-GetLuaFilesList}
+### table, table GetLuaFilesList() {#table-table-GetLuaFilesList}
 
-### userdata GetVoxelFilesList() {#userdata-GetVoxelFilesList}
+### table, table GetVoxelFilesList() {#table-table-GetVoxelFilesList}
 
 ### nil SaveScene() {#nil-SaveScene}
 
