--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -157,7 +157,7 @@ id: VoxelDB
 
 ### table GetUsedLayers() {#table-GetUsedLayers}
 
-### userdata GetBounds() {#userdata-GetBounds}
+### float, float GetBounds() {#float-float-GetBounds}
 
 ## Properties
 
