--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -14,7 +14,7 @@ id: VoxelDataResource
 ### string Save(string, bool) {#string-Save-string-bool}
 save voxel data in AM file
 
-### userdata GetBounds() {#userdata-GetBounds}
+### float, float GetBounds() {#float-float-GetBounds}
 
 ### userdata Duplicate() {#userdata-Duplicate}
 
