--- a/docs/90-api/voxelRenderer.mdx
+++ b/docs/90-api/voxelRenderer.mdx
@@ -11,7 +11,7 @@ id: VoxelRenderer
 
 ## Methods
 
-### userdata GetBounds() {#userdata-GetBounds}
+### float, float GetBounds() {#float-float-GetBounds}
 
 ## Properties
 
